hphp/hack/test/typecheck/references/superglobals_by_ref.php.exp
File "superglobals_by_ref.php", line 5, characters 8-15:
References are only permitted as function call arguments. (Parsing[1002])
